fixes #830, #880: bring back iOS tests; split OS X & iOS tests

--- a/.travis.yml
+++ b/.travis.yml
@@ -35,7 +35,10 @@ matrix:
       env: BUILDTYPE=Release JOBS=8
       compiler: gcc
     - os: osx
-      env: BUILDTYPE=Debug JOBS=8
+      env: BUILDTYPE=Debug JOBS=8 TEST_OS=osx
+      compiler: clang
+    - os: osx
+      env: BUILDTYPE=Release JOBS=8 TEST_OS=ios
       compiler: clang
 
 env:
